; ModuleID = '/home/carl/AnghaBench/git/ewah/extr_ewah_bitmap.c_ewah_add_empty_words.c'
source_filename = "/home/carl/AnghaBench/git/ewah/extr_ewah_bitmap.c_ewah_add_empty_words.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ewah_bitmap = type { i64 }

@BITS_IN_EWORD = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ewah_add_empty_words(%struct.ewah_bitmap* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.ewah_bitmap*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.ewah_bitmap* %0, %struct.ewah_bitmap** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %3
  store i64 0, i64* %4, align 8
  br label %23

11:                                               ; preds = %3
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* @BITS_IN_EWORD, align 8
  %14 = mul i64 %12, %13
  %15 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %5, align 8
  %16 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = add i64 %17, %14
  store i64 %18, i64* %16, align 8
  %19 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load i64, i64* %7, align 8
  %22 = call i64 @add_empty_words(%struct.ewah_bitmap* %19, i32 %20, i64 %21)
  store i64 %22, i64* %4, align 8
  br label %23

23:                                               ; preds = %11, %10
  %24 = load i64, i64* %4, align 8
  ret i64 %24
}

declare dso_local i64 @add_empty_words(%struct.ewah_bitmap*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
